--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.soa.rs</groupId>
   <artifactId>discordbot</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <repositories>
     <repository>
       <snapshots>
@@ -146,6 +146,14 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10.4</version>
+	<configuration>
+	  <show>private</show>
+	</configuration>
       </plugin>
     </plugins>
   </build>
