--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <artifactId>discordbot</artifactId>
   <packaging>jar</packaging>
   <version>1.1-SNAPSHOT</version>
+
   <repositories>
     <repository>
       <snapshots>
@@ -13,6 +14,11 @@
       <id>central</id>
       <name>Maven Repository Switchboard</name>
       <url>http://repo1.maven.org/maven2</url>
+    </repository>
+    <!-- Due to errors in the d4j player, this repo must be higher in the list so the patched d4j player is used -->
+    <repository>
+      <id>soa.rs</id>
+      <url>http://repo.spiritsofarianwyn.com</url>
     </repository>
     <repository>
       <!-- This repo fixes issues with transitive dependencies -->
@@ -24,9 +30,12 @@
       <url>https://jitpack.io</url>
     </repository>
   </repositories>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <arch>noarch</arch>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>com.rometools</groupId>
@@ -64,7 +73,54 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20150729</version>
+    </dependency>
+    <!-- Note - pull the next two from the soa repo
+         d4j-player has a bug that was patched by
+	 Jeff and re-deployed for use -->
+    <dependency>
+      <groupId>net.dv8tion</groupId>
+      <artifactId>d4j-player</artifactId>
+      <version>0.2.3_25</version>
+    </dependency>
+    <dependency>
+      <groupId>com.soa.rs</groupId>
+      <artifactId>d4j-player-libs-${arch}</artifactId>
+      <version>1.0</version>
+    </dependency>
   </dependencies>
+ 
+  <profiles>
+    <profile>
+      <id>win64</id>
+      <properties>
+        <arch>win64</arch>
+      </properties>
+    </profile>
+    <profile>
+      <id>win32</id>
+      <properties>
+        <arch>win32</arch>
+      </properties>
+    </profile>
+    <profile>
+      <id>linux64</id>
+      <properties>
+        <arch>linux64</arch>
+      </properties>
+    </profile>
+    <profile>
+      <id>linux32</id>
+      <properties>
+        <arch>linux32</arch>
+      </properties>
+    </profile>
+  </profiles>
+
+
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <plugins>
@@ -79,6 +135,7 @@
       <plugin>
         <groupId>org.jvnet.jaxb2.maven2</groupId>
         <artifactId>maven-jaxb2-plugin</artifactId>
+	<version>0.10.0</version>
         <executions>
           <execution>
             <goals>
@@ -90,6 +147,13 @@
           <schemaDirectory>./src/main/xsd</schemaDirectory>
           <generateDirectory>./src/main/java</generateDirectory>
           <generatePackage>com.soa.rs.discordbot.jaxb</generatePackage>
+	  <plugins>
+	    <plugin>
+	      <groupId>org.jvnet.jaxb2_commons</groupId>
+	      <artifactId>jaxb2-basics</artifactId>
+	      <version>0.9.0</version>
+	    </plugin>
+	  </plugins>
         </configuration>
       </plugin>
       <plugin>
@@ -109,7 +173,49 @@
               <goal>run</goal>
             </goals>
           </execution>
+	  <execution>
+	    <id>chmod</id>
+	    <phase>package</phase>
+	    <goals>
+	      <goal>run</goal>
+	    </goals>
+	    <configuration>
+	      <tasks>
+	        <echo>running chmod on ffmpeg</echo>
+		<exec executable="chmod">
+		  <arg value="755"/>
+                  <arg value="${project.build.directory}/ffmpeg"/>
+		</exec>
+              </tasks>
+	    </configuration>
+	  </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-dependency-plugin</artifactId>
+	<executions>
+	  <execution>
+	    <phase>initialize</phase>
+	    <goals>
+	      <goal>unpack</goal>
+	    </goals>
+	    <configuration>
+	      <artifactItems>
+	        <artifactItem>
+	          <groupId>com.soa.rs</groupId>
+		  <artifactId>d4j-player-libs-${arch}</artifactId>
+		  <version>1.0</version>
+		  <type>jar</type>
+		  <overWrite>false</overWrite>
+		  <outputDirectory>${project.build.directory}</outputDirectory>
+		  <includes>*</includes>
+                  <excludes>META-INF</excludes>
+                </artifactItem>
+	      </artifactItems>
+	    </configuration>
+	  </execution>
+	</executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -136,6 +242,11 @@
               </excludes>
             </filter>
           </filters>
+	  <artifactSet>
+	    <excludes>
+	      <exclude>com.soa.rs:d4j-player-libs-${arch}:*</exclude>
+	    </excludes>
+	  </artifactSet>
         </configuration>
         <executions>
           <execution>
