--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <packaging>jar</packaging>
   <version>1.1-SNAPSHOT</version>
 
+
   <repositories>
     <repository>
       <snapshots>
@@ -35,6 +36,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <arch>noarch</arch>
   </properties>
+
+  <url>https://github.com/SoAJeff/SoADiscordBot</url>
 
   <dependencies>
     <dependency>
@@ -229,12 +232,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>2.1</version>
+        <version>2.4.3</version>
         <configuration>
           <createDependencyReducedPom>false</createDependencyReducedPom>
           <filters>
             <filter>
-              <artifact>*:*</artifact>
+              <artifact>*:*</artifact>``
               <excludes>
                 <exclude>META-INF/*.SF</exclude>
                 <exclude>META-INF/*.DSA</exclude>
@@ -258,6 +261,11 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>com.soa.rs.discordbot.bot.BotLauncher</mainClass>
+		  <manifestEntries>
+		    <Implementation-Version>${project.version}</Implementation-Version> 
+		    <Implementation-Title>${project.name}</Implementation-Title>
+		    <Implementation-URL>${project.url}</Implementation-URL>
+		  </manifestEntries>
                 </transformer>
               </transformers>
             </configuration>
@@ -269,7 +277,8 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.10.4</version>
 	<configuration>
-	  <show>private</show>
+	  <show>private</show>A
+	  <excludePackageNames>com.soa.rs.discordbot.jaxb</excludePackageNames>
 	</configuration>
       </plugin>
     </plugins>
