--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>com.github.austinv11</groupId>
       <artifactId>Discord4j</artifactId>
-      <version>2.6.1</version>
+      <version>2.7.0</version>
     </dependency>
     <dependency>
       <groupId>org.jvnet.jaxb2_commons</groupId>
@@ -237,7 +237,7 @@
           <createDependencyReducedPom>false</createDependencyReducedPom>
           <filters>
             <filter>
-              <artifact>*:*</artifact>``
+              <artifact>*:*</artifact>
               <excludes>
                 <exclude>META-INF/*.SF</exclude>
                 <exclude>META-INF/*.DSA</exclude>
