--- a/triviacreator/pom.xml
+++ b/triviacreator/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.soa.rs</groupId>
-  <artifactId>discordbot</artifactId>
+  <artifactId>triviacreator</artifactId>
   <packaging>jar</packaging>
-  <version>1.4-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
 
 
   <repositories>
@@ -17,13 +17,8 @@
       <url>http://repo1.maven.org/maven2</url>
     </repository>
     <repository>
-      <!-- This repo fixes issues with transitive dependencies -->
-      <id>jcenter</id>
-      <url>http://jcenter.bintray.com</url>
-    </repository>
-    <repository>
-      <id>jitpack.io</id>
-      <url>https://jitpack.io</url>
+      <id>soa</id>
+      <url>http://repo.spiritsofarianwyn.com</url>
     </repository>
   </repositories>
 
@@ -35,16 +30,6 @@
   <url>https://github.com/SoAJeff/SoADiscordBot</url>
 
   <dependencies>
-    <dependency>
-      <groupId>com.rometools</groupId>
-      <artifactId>rome</artifactId>
-      <version>1.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.github.austinv11</groupId>
-      <artifactId>Discord4j</artifactId>
-      <version>2.8.0</version>
-    </dependency>
     <dependency>
       <groupId>org.jvnet.jaxb2_commons</groupId>
       <artifactId>jaxb2-basics-runtime</artifactId>
@@ -61,25 +46,10 @@
       <version>2.7</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
-      <version>2.7</version>
-    </dependency>
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.sedmelluq</groupId>
-      <artifactId>lavaplayer</artifactId>
-      <version>1.2.36</version>
-    </dependency>
-    <dependency>
-      <groupId>com.soa.rs</groupId>
-      <artifactId>triviacreator</artifactId>
-      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
  
@@ -108,7 +78,7 @@
         <configuration>
           <schemaDirectory>./src/main/xsd</schemaDirectory>
           <generateDirectory>./src/main/java</generateDirectory>
-          <generatePackage>com.soa.rs.discordbot.jaxb</generatePackage>
+          <generatePackage>com.soa.rs.triviacreator.jaxb</generatePackage>
 	  <plugins>
 	    <plugin>
 	      <groupId>org.jvnet.jaxb2_commons</groupId>
@@ -127,7 +97,7 @@
             <phase>pre-clean</phase>
             <configuration>
               <tasks>
-                <delete dir="./src/main/java/com/soa/rs/discordbot/jaxb"/>
+                <delete dir="./src/main/java/com/soa/rs/triviacreator/jaxb"/>
                 <delete dir="./src/main/java/META-INF"/>
               </tasks>
             </configuration>
@@ -172,7 +142,7 @@
             <configuration>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>com.soa.rs.discordbot.bot.BotLauncher</mainClass>
+                 <!-- <mainClass>com.soa.rs.discordbot.bot.BotLauncher</mainClass> -->
 		  <manifestEntries>
 		    <Implementation-Version>${project.version}</Implementation-Version> 
 		    <Implementation-Title>${project.name}</Implementation-Title>
@@ -180,6 +150,8 @@
 		  </manifestEntries>
                 </transformer>
               </transformers>
+	      <shadedArtifactAttached>true</shadedArtifactAttached>
+	      <shadedClassifierName>shaded</shadedClassifierName>
             </configuration>
           </execution>
         </executions>
@@ -188,10 +160,31 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.10.4</version>
-	<configuration>
-	  <show>private</show>
-	  <excludePackageNames>com.soa.rs.discordbot.jaxb</excludePackageNames>
-	</configuration>
+	<executions>
+	  <execution>
+	    <id>attach-javadocs</id>
+	    <goals>
+	      <goal>jar</goal>
+	    </goals>
+	    <configuration>
+	      <show>private</show>
+	      <excludePackageNames>com.soa.rs.triviacreator.jaxb</excludePackageNames>
+	    </configuration>
+	  </execution>
+	</executions>
+      </plugin>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-source-plugin</artifactId>
+	<version>3.0.1</version>
+	<executions>
+  	  <execution>
+	    <id>attach-sources</id>
+   	    <goals>
+	      <goal>jar</goal>
+	    </goals>
+	  </execution>
+	</executions>
       </plugin>
     </plugins>
   </build>
