--- a/discordbot/pom.xml
+++ b/discordbot/pom.xml
@@ -7,9 +7,8 @@
     <version>1.3-SNAPSHOT</version>
   </parent>
 
-  <artifactId>triviacreator</artifactId>
+  <artifactId>discordbot</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
 
 
   <repositories>
@@ -22,6 +21,15 @@
       <url>http://repo1.maven.org/maven2</url>
     </repository>
     <repository>
+      <!-- This repo fixes issues with transitive dependencies -->
+      <id>jcenter</id>
+      <url>http://jcenter.bintray.com</url>
+    </repository>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+    <repository>
       <id>soa</id>
       <url>http://repo.spiritsofarianwyn.com</url>
     </repository>
@@ -29,12 +37,21 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <arch>noarch</arch>
   </properties>
 
   <url>https://github.com/SoAJeff/SoADiscordBot</url>
 
   <dependencies>
+    <dependency>
+      <groupId>com.rometools</groupId>
+      <artifactId>rome</artifactId>
+      <version>1.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.austinv11</groupId>
+      <artifactId>Discord4j</artifactId>
+      <version>2.8.0</version>
+    </dependency>
     <dependency>
       <groupId>org.jvnet.jaxb2_commons</groupId>
       <artifactId>jaxb2-basics-runtime</artifactId>
@@ -51,10 +68,25 @@
       <version>2.7</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>2.7</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.sedmelluq</groupId>
+      <artifactId>lavaplayer</artifactId>
+      <version>1.2.36</version>
+    </dependency>
+    <dependency>
+      <groupId>com.soa.rs</groupId>
+      <artifactId>triviacreator</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
  
@@ -83,7 +115,7 @@
         <configuration>
           <schemaDirectory>./src/main/xsd</schemaDirectory>
           <generateDirectory>./src/main/java</generateDirectory>
-          <generatePackage>com.soa.rs.triviacreator.jaxb</generatePackage>
+          <generatePackage>com.soa.rs.discordbot.jaxb</generatePackage>
 	  <plugins>
 	    <plugin>
 	      <groupId>org.jvnet.jaxb2_commons</groupId>
@@ -102,7 +134,7 @@
             <phase>pre-clean</phase>
             <configuration>
               <tasks>
-                <delete dir="./src/main/java/com/soa/rs/triviacreator/jaxb"/>
+                <delete dir="./src/main/java/com/soa/rs/discordbot/jaxb"/>
                 <delete dir="./src/main/java/META-INF"/>
               </tasks>
             </configuration>
@@ -147,7 +179,7 @@
             <configuration>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                 <!-- <mainClass>com.soa.rs.discordbot.bot.BotLauncher</mainClass> -->
+                  <mainClass>com.soa.rs.discordbot.bot.BotLauncher</mainClass>
 		  <manifestEntries>
 		    <Implementation-Version>${project.version}</Implementation-Version> 
 		    <Implementation-Title>${project.name}</Implementation-Title>
@@ -155,8 +187,6 @@
 		  </manifestEntries>
                 </transformer>
               </transformers>
-	      <shadedArtifactAttached>true</shadedArtifactAttached>
-	      <shadedClassifierName>shaded</shadedClassifierName>
             </configuration>
           </execution>
         </executions>
@@ -165,31 +195,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.10.4</version>
-	<executions>
-	  <execution>
-	    <id>attach-javadocs</id>
-	    <goals>
-	      <goal>jar</goal>
-	    </goals>
-	    <configuration>
-	      <show>private</show>
-	      <excludePackageNames>com.soa.rs.triviacreator.jaxb</excludePackageNames>
-	    </configuration>
-	  </execution>
-	</executions>
-      </plugin>
-      <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-source-plugin</artifactId>
-	<version>3.0.1</version>
-	<executions>
-  	  <execution>
-	    <id>attach-sources</id>
-   	    <goals>
-	      <goal>jar</goal>
-	    </goals>
-	  </execution>
-	</executions>
+	<configuration>
+	  <show>private</show>
+	  <excludePackageNames>com.soa.rs.discordbot.jaxb</excludePackageNames>
+	</configuration>
       </plugin>
     </plugins>
   </build>
