--- a/discordbot/pom.xml
+++ b/discordbot/pom.xml
@@ -92,6 +92,15 @@
  
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
+    <resources>
+      <resource>
+        <targetPath>xsd</targetPath>
+        <directory>src/main/xsd</directory>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
