--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 **/target/**
 **/.classpath
 **/.project
+**/maven-eclipse.xml
 **/.settings/**
+**/.externalToolBuilders/**
 **/jaxb/**
 **/META-INF/**
