--- a/discordbot/pom.xml
+++ b/discordbot/pom.xml
@@ -4,12 +4,10 @@
   <parent>
     <groupId>com.soa.rs</groupId>
     <artifactId>DISCORD</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
   </parent>
-
   <artifactId>discordbot</artifactId>
   <packaging>jar</packaging>
-
 
   <repositories>
     <repository>
@@ -89,7 +87,7 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
- 
+
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <resources>
@@ -113,7 +111,7 @@
       <plugin>
         <groupId>org.jvnet.jaxb2.maven2</groupId>
         <artifactId>maven-jaxb2-plugin</artifactId>
-	<version>0.10.0</version>
+        <version>0.10.0</version>
         <executions>
           <execution>
             <goals>
@@ -125,13 +123,13 @@
           <schemaDirectory>./src/main/xsd</schemaDirectory>
           <generateDirectory>./src/main/java</generateDirectory>
           <generatePackage>com.soa.rs.discordbot.jaxb</generatePackage>
-	  <plugins>
-	    <plugin>
-	      <groupId>org.jvnet.jaxb2_commons</groupId>
-	      <artifactId>jaxb2-basics</artifactId>
-	      <version>0.9.0</version>
-	    </plugin>
-	  </plugins>
+          <plugins>
+            <plugin>
+              <groupId>org.jvnet.jaxb2_commons</groupId>
+              <artifactId>jaxb2-basics</artifactId>
+              <version>0.9.0</version>
+            </plugin>
+          </plugins>
         </configuration>
       </plugin>
       <plugin>
@@ -189,11 +187,11 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>com.soa.rs.discordbot.bot.BotLauncher</mainClass>
-		  <manifestEntries>
-		    <Implementation-Version>${project.version}</Implementation-Version> 
-		    <Implementation-Title>${project.name}</Implementation-Title>
-		    <Implementation-URL>${project.url}</Implementation-URL>
-		  </manifestEntries>
+                  <manifestEntries>
+                    <Implementation-Version>${project.version}</Implementation-Version>
+                    <Implementation-Title>${project.name}</Implementation-Title>
+                    <Implementation-URL>${project.url}</Implementation-URL>
+                  </manifestEntries>
                 </transformer>
               </transformers>
             </configuration>
@@ -204,10 +202,30 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.10.4</version>
-	<configuration>
-	  <show>private</show>
-	  <excludePackageNames>com.soa.rs.discordbot.jaxb</excludePackageNames>
-	</configuration>
+        <configuration>
+          <show>private</show>
+          <excludePackageNames>com.soa.rs.discordbot.jaxb</excludePackageNames>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.7.9</version>
+        <executions>
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>post-unit-test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
